--- a/notebooks/notebook1.ipynb
+++ b/notebooks/notebook1.ipynb
@@ -9,19 +9,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'game_age' from 'Task_1.agent' (/Users/laerte/pam_ai/pam_ai/src/Task_1/agent.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-9e26f81225b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mTask_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magent\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgame_age\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mTask_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrid\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgame_grid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mTask_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimple_search\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msimple_search\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'game_age' from 'Task_1.agent' (/Users/laerte/pam_ai/pam_ai/src/Task_1/agent.py)"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '/Users/laerte/pam_ai/pam_ai/src')\n",
+    "#import pathlib\n",
+    "#\n",
+    "#path = pathlib.Path(__file__).absolute()\n",
+    "#print(path)\n",
+    "import random\n",
     "\n",
-    "import random"
+    "from Task_1.agent import game_age\n",
+    "from Task_1.grid import game_grid\n",
+    "from Task_1.simple_search import simple_search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialise the objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -33,38 +59,78 @@
     }
    ],
    "source": [
-    "from Task_1.agent import game_agent\n",
-    "from Task_1.grid import game_grid\n",
-    "\n",
+    "# The object game_agent is employed to store agent position and the overall value of game movements\n",
     "ag = game_agent(0,0)\n",
+    "\n",
     "ag.add_step(10)\n",
     "print(ag.timer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "generate_grid() missing 1 required positional argument: 'method'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-7faca9aa1c5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgame_grid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mgd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_grid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: generate_grid() missing 1 required positional argument: 'method'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 6 3 3 5 4]\n",
+      " [6 8 1 7 5 6]\n",
+      " [7 3 8 6 2 3]\n",
+      " [8 3 7 8 8 4]\n",
+      " [8 7 1 5 7 8]]\n"
      ]
     }
    ],
    "source": [
-    "gd = game_grid(2,3)\n",
+    "gd = game_grid(5,6)\n",
     "\n",
     "gd.generate_grid()\n",
     "\n",
     "print(gd.grid)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ag.add_step(gd.grid[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gd.grid.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Struttura di esempio: \n",
+    "\n",
+    "- inizializza il tutto\n",
+    "- fai un loop, magari con il while\n",
+    "- per ogni step, valuta la direzione con .evaluate_direction\n",
+    "- muoviti e aggiorna posizione e somma totale "
    ]
   }
  ],
