--- a/notebooks/notebook1.ipynb
+++ b/notebooks/notebook1.ipynb
@@ -163,6 +163,16 @@
     "print(\"Simple Search: {}\".format(ag.timer))\n",
     "print(\"Dij Search: {}\".format(agD.timer))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import random\n",
+    "rng = random.default_rng()\n"
+   ]
   }
  ],
  "metadata": {
