--- a/notebooks/notebook1.ipynb
+++ b/notebooks/notebook1.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "square_dimesions = np.array([(10,10),(20,20),(30,30),(50,50),(100,100),(200,200),(300,300)])\n",
+    "square_dimesions = np.array([(10,10),(20,20),(30,30),(50,50),(75,75),(100,100),(150,150),(200,200),(300,300)])\n",
     "n_executions = 40\n",
     "\n",
     "x_plot = square_dimesions.prod(axis=1) \n",
@@ -403,7 +403,7 @@
     "plt.legend(title=\"Methods\")\n",
     "ax.set_xlabel(\"Number of grid elements\")\n",
     "ax.set_ylabel(\"Execution time [ms]\")\n",
-    "plt.grid()\n"
+    "#plt.grid()\n"
    ]
   },
   {
