--- a/notebooks/Task3_2.ipynb
+++ b/notebooks/Task3_2.ipynb
@@ -28,6 +28,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3137504f-54aa-4be0-89bb-33d1c48c5991",
+   "metadata": {},
+   "source": [
+    "This data given by an airline organization. The actual name of the company is not given due to various purposes that's why the name Invistico airlines.\n",
+    "\n",
+    "The dataset consists of the details of customers who have already flown with them. The feedback of the customers on various context and their flight data has been consolidated.\n",
+    "\n",
+    "The main purpose of this dataset is to predict whether a future customer would be satisfied with their service given the details of the other parameters values. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "ba21500f-e3bf-4c9d-be8e-0d1fdacf2eda",
@@ -45,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "life = pd.read_csv(path+file_name)"
+    "airlines = pd.read_csv(path+file_name)"
    ]
   },
   {
@@ -66,7 +78,7 @@
     }
    ],
    "source": [
-    "life.shape"
+    "airlines.shape"
    ]
   },
   {
@@ -297,13 +309,83 @@
     }
    ],
    "source": [
-    "life.head()"
+    "airlines.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8804d696-0358-4bc8-9c35-1898573cecc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 129880 entries, 0 to 129879\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                             Non-Null Count   Dtype  \n",
+      "---  ------                             --------------   -----  \n",
+      " 0   satisfaction                       129880 non-null  object \n",
+      " 1   Gender                             129880 non-null  object \n",
+      " 2   Customer Type                      129880 non-null  object \n",
+      " 3   Age                                129880 non-null  int64  \n",
+      " 4   Type of Travel                     129880 non-null  object \n",
+      " 5   Class                              129880 non-null  object \n",
+      " 6   Flight Distance                    129880 non-null  int64  \n",
+      " 7   Seat comfort                       129880 non-null  int64  \n",
+      " 8   Departure/Arrival time convenient  129880 non-null  int64  \n",
+      " 9   Food and drink                     129880 non-null  int64  \n",
+      " 10  Gate location                      129880 non-null  int64  \n",
+      " 11  Inflight wifi service              129880 non-null  int64  \n",
+      " 12  Inflight entertainment             129880 non-null  int64  \n",
+      " 13  Online support                     129880 non-null  int64  \n",
+      " 14  Ease of Online booking             129880 non-null  int64  \n",
+      " 15  On-board service                   129880 non-null  int64  \n",
+      " 16  Leg room service                   129880 non-null  int64  \n",
+      " 17  Baggage handling                   129880 non-null  int64  \n",
+      " 18  Checkin service                    129880 non-null  int64  \n",
+      " 19  Cleanliness                        129880 non-null  int64  \n",
+      " 20  Online boarding                    129880 non-null  int64  \n",
+      " 21  Departure Delay in Minutes         129880 non-null  int64  \n",
+      " 22  Arrival Delay in Minutes           129487 non-null  float64\n",
+      "dtypes: float64(1), int64(17), object(5)\n",
+      "memory usage: 22.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "airlines.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bd6a8550-8242-421c-9bc0-06f687d84161",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "satisfied       71087\n",
+       "dissatisfied    58793\n",
+       "Name: satisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airlines.satisfaction.value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd6a8550-8242-421c-9bc0-06f687d84161",
+   "id": "314b1b58-577f-42b8-9c1f-af610789d91f",
    "metadata": {},
    "outputs": [],
    "source": []
