Improvements at Task3

--- a/notebooks/Task3_2.ipynb
+++ b/notebooks/Task3_2.ipynb
@@ -1010,9 +1010,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bac008e2-0d57-4cda-acf5-689fa1d8f245",
+   "metadata": {},
+   "source": [
+    "It can be inferred that the learning rate influences both the loss trend (for some cases this even increases) and the accuracy (with a peak associated with a learning rate of 0.001). From this evaluation, it was possible to carry out a fine-tuning of the procedure, also making use of the knowledge gained previously."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68be52ba-5d8a-47a2-9393-d343128206bf",
+   "id": "e4e3e626-9200-4f7c-9263-d2d0e011c310",
    "metadata": {},
    "outputs": [],
    "source": []
