--- a/notebooks/Task1.ipynb
+++ b/notebooks/Task1.ipynb
@@ -20,11 +20,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '/Users/laerte/MSc_AI/Projects/pam_ai/src')\n",
+    "sys.path.insert(0, '../src')\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -70,7 +72,7 @@
     "# It requires as argumentes the vertical and horizontal dimensions of the grid\n",
     "grid = GameGrid(10,10) \n",
     "grid.generate_grid()\n",
-    "save_path =  \"\"#\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/grid.png\" # to save the grid as png file\n",
+    "save_path =  \"\"#\"../results/Task1/grid.png\" # to save the grid as png file\n",
     "grid.print_grid(save_path= save_path);"
    ]
   },
@@ -156,7 +158,7 @@
     "simpSearch = SimpleSearch(ag_simple,grid)\n",
     "simpSearch.compute_path()\n",
     "\n",
-    "save_path =  \"\"#\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/simple.png\"\n",
+    "save_path =  \"\"#\"../results/Task1/simple.png\"\n",
     "grid.print_path(simpSearch.visited_set, save_path=save_path) # print the grid and the path followed\n",
     "print(\"Simple Search score: {}\".format(ag_simple.timer))"
    ]
@@ -199,7 +201,7 @@
     "dijSearch = DijkstraSearch(ag_dijkstra, grid)\n",
     "dijSearch.compute_path(get_path=True)\n",
     "\n",
-    "save_path = \"\"# \"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/dijkstra.png\"\n",
+    "save_path = \"\"# \"../results/Task1/dijkstra.png\"\n",
     "grid.print_path(dijSearch.visited_set, save_path= save_path) # print the grid and the path followed\n",
     "print(\"Dijkstra Search score: {}\".format(ag_dijkstra.timer))"
    ]
@@ -491,7 +493,7 @@
     "ax.legend(title=\"Methods\")\n",
     "ax2.set_xlabel(\"Dimension of the grid\")\n",
     "f.text(0.03, 0.5, \"Execution time [ms]\", va='center', rotation='vertical');\n",
-    "plt.savefig(\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/time.png\")"
+    "#plt.savefig(\"../results/Task1/time.png\")"
    ]
   },
   {
@@ -577,7 +579,7 @@
     "ax.legend(title=\"Methods\")\n",
     "ax2.set_xlabel(\"Dimension of the grid\")\n",
     "f.text(0.03, 0.5, \"Execution time [ms]\", va='center', rotation='vertical');\n",
-    "plt.savefig(\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/time_focus.png\")"
+    "#plt.savefig(\"../results/Task1/time_focus.png\")"
    ]
   },
   {
@@ -652,7 +654,7 @@
     "ax.legend(handles=[p1, p2, p3])\n",
     "\n",
     "plt.show()\n",
-    "fig.savefig(\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/time_norm.png\")"
+    "#fig.savefig(\"../results/Task1/time_norm.png\")"
    ]
   },
   {
@@ -696,7 +698,7 @@
     "#plt.title(\"Score vs dimension of the grid\")\n",
     "ax.set_xlabel(\"Dimension of the grid\")\n",
     "ax.set_ylabel(\"Score\");\n",
-    "plt.savefig(\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/score.png\")"
+    "#plt.savefig(\"../results/Task1/score.png\")"
    ]
   },
   {
@@ -739,7 +741,7 @@
     "#plt.title(\"Score vs dimension of the grid\")\n",
     "ax.set_xlabel(\"Dimension of the grid\")\n",
     "ax.set_ylabel(\"Score\");\n",
-    "plt.savefig(\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/score_focus.png\")\n"
+    "#plt.savefig(\"../results/Task1/score_focus.png\")\n"
    ]
   },
   {
@@ -814,7 +816,7 @@
     "ax.legend(handles=[p1, p2])\n",
     "\n",
     "plt.show()\n",
-    "fig.savefig(\"/Users/laerte/MSc_AI/Projects/pam_ai/results/Task1/simple_dijkstra_comp.png\")"
+    "#fig.savefig(\"../results/Task1/simple_dijkstra_comp.png\")"
    ]
   },
   {
@@ -852,5 +854,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
